@@ -24,6 +24,7 @@ Removed Engines.version - it's not longer relevant, now we're loading version in
 Added a huge amount of documentation to all new modules.
 Added new warning message if installation of engines 1.2.x is attempted in a Rails 1.1.x application
 Added details of the removal of the config method to UPGRADING
+Removed the plugins:info rake task in favour of adding information to script/about via the Rails::Info module (Ticket #261)
 
 
 -----
